src/index.css
/* ... */
.enter-simulation-btn span{
  transform: translateX(0);
  transition: 0.3s;
  transition-delay: 0.05s;
}

.enter-simulation-btn:hover{
  width: 170px;
  transition-delay: 0.1s;
}

.enter-simulation-btn:hover span{
  transform: translateX(-8px);
}
.enter-simulation-btn:hover .chevron{
  visibility: visible;
  transform: rotate(-45deg) translateY(2px) translateX(2px);
}


.chevron {
  visibility: hidden;
  display: inline-block;
  border-right:
      1px solid rgb(255, 255, 255);
  border-bottom:
      1px solid rgb(255, 255, 255);
  width: 8px;
  height: 8px;
  transform: rotate(-45deg);
  margin-bottom: 1px;
  transition: 0.25s;
}





.simulation-hamburger-menu{
  height: 50px;
  width: 50px;
  border-radius: 30px;
  border: 2px solid rgba(255, 255, 255, 0.9);
  background-color: rgba(0, 0, 0, 0.103);
  backdrop-filter: blur(8px); 
  cursor: pointer;
  transition: 0.3s;
}
.simulation-hamburger-menu:hover{
  transform: scale(1.15);
}


.radar-quick-menu{
  border-radius: 50%;
  border-left: 3px solid white;
  background-image: linear-gradient(to right, rgba(0, 0, 0, 0.264), rgba(0, 0, 0, 0), rgba(0, 0, 0, 0));

}

.quick-nav-component-container{
  transition-duration: 0.25s;
  cursor: pointer;
}
.quick-nav-component-container:hover{
  transform: scale(1.1);  
}




.quick-nav-component-content{
  height: 25px;
  width: auto;
  
}

.quick-nav-component-content-mobile{
  height: 20px;
  width: auto;
  
}


.quick-nav-comp-effect{
 
  border: none;
}

.quick-nav-comp-effect:hover{
  border: 3px solid white;

}

.enable-special-effect-off{
  background-color: rgb(72, 72, 72);
}

.enable-special-effect-off:hover{
  border: 3px solid rgb(72, 72, 72);
}


.quick-navigation-open-animation{
  transition: 0.4s;
  transform: scale(0);
}

.quick-navigation-open-animation.open{
  transform: scale(1);
}


.about-me-panel-config, .my-project-panel-config{
  max-width: 53vw;
  max-height: 65vh;
  background-color: rgb(243, 242, 247);
  z-index: 30;
  position: absolute;
}
.my-project-panel-config{
  padding-bottom: 10px;
}

.remove-max-height{
  max-height: 100%;
}
.window-small-height-project-description{
  max-width: 70%;
}
.about-me-panel-config-mobile, .my-project-panel-config-mobile{
  width: 85vw;
  height: 83vh;
  background-color: rgb(243, 242, 247);
  z-index: 30;
  position: absolute;
}


.project-details-panel-mobile{
  max-width: 62%;
  margin-bottom: 20px;
}


.profile-pic-container{
  width: 160px;
  height: 160px;
  background-color: transparent;
}
.profile-pic-container-mobile{
  width: 120px;
  height: 120px;
  background-color: transparent;
}




.instagram-styled-btn{
  padding: 8px 30px;
  background-color: transparent;
  border: 2px solid rgb(25, 25, 25);
  color: black;
  border-radius: 20px;
  transition: 0.3s;
  cursor: pointer;
}

.instagram-styled-btn:hover{
  transform: scale(1.1);
  box-shadow: 0px 5px 24px -2px rgba(106,106,106,0.75);
  -webkit-box-shadow: 0px 5px 24px -2px rgba(106,106,106,0.75);
  -moz-box-shadow: 0px 5px 24px -2px rgba(106,106,106,0.75);
}


.github-styled-btn{
  padding: 8px 30px;
  background-color: rgb(25, 25, 25);
  color: white;
  border-radius: 20px;
  transition: 0.3s;
  cursor: pointer;
}

.github-styled-btn:hover{
  transform: scale(1.1);
  box-shadow: 0px 5px 24px -2px rgba(106,106,106,0.75);
  -webkit-box-shadow: 0px 5px 24px -2px rgba(106,106,106,0.75);
  -moz-box-shadow: 0px 5px 24px -2px rgba(106,106,106,0.75);
}

.next-project-btn{
  transition: 0.3s;
}

.next-project-btn:hover{
  background-color: rgba(0, 0, 0, 0.059);
  
}

.panel-close{
  padding-left: 40px;
  display: flex;
  justify-content: start;
  align-items: center;
  cursor: pointer;
}

.notification-panel {
  position: fixed;
  top: 20px;
  right: 20px;
  background-color: rgba(0, 0, 0, 0.25);
  backdrop-filter: blur(10px);
  border: 1px solid rgba(198, 198, 198, 0.5);
  border-radius: 5px;
  padding: 15px;
  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
  z-index: 100;
  color: rgba(255, 255, 255, 0.7);
  width: 400px;
}

.notification-panel-mobile {
  position: fixed;
  top: 20px;
  right: 20px;
  background-color: rgba(0, 0, 0, 0.25);
  backdrop-filter: blur(10px);
  border: 1px solid rgba(198, 198, 198, 0.5);
  border-radius: 5px;
  padding: 8px;
  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
  z-index: 100;
  color: rgba(255, 255, 255, 0.7);
  width: 300px;
}


.composure-effect-img{
  width: 25px;
  height: 25px;
}

.notification-icon{
  width: 100px;
  height: 50px;
  display: flex;
  justify-content: center;
  align-items: center;
  background-color: white;
  border-radius: 50px;
}


/* Loader from css-loaders.com*/
.loader {
  display: inline-flex;
  gap: 5px;
  animation: l2-0 1s infinite;
}
.loader:before,
.loader:after {
  content: "";
  width: 25px;
  aspect-ratio: 1;
  box-shadow: 0 0 0 3px inset #fff;
  animation: l2-1 1s infinite;
}
.loader:after {
  --s: -1;
}
@keyframes l2-0 {
  0%,
  50% {transform:rotate(0deg)}
  80%,
  100% {transform:rotate(180deg)}
}
@keyframes l2-1 {
  0%   {transform:translate(0)}
  50%,
  80%  {transform:translate(calc(var(--s,1)*2.5px))}
  100% {transform:translate(0)}
}

.rotate-phone{
  width: 50px;
  height: 100px;
  background-color: transparent;
  border-radius: 10px;
  border: 2px solid white;
}

.tutorial-image-container{
  width: 130px;
  height: 90px;
  display: flex;
  justify-content: center;
  align-items: center;
}

.swipe-icon{
  width: 20px;
  height: 20px;
  border-radius: 10px;
  background-color: white;
}

.simple-button{
  background-color: rgb(215, 215, 223);
  padding: 2px 10px;
  border-radius: 5px;
}



@media (width <= 80rem ) {
  .about-me-panel-config{
    max-width: 95vw;
    max-height: 95vh;    
  }
  .my-project-panel-config{
    max-width: 95vw; 
  }
  

}


@media (max-width: 800px) {
  .text-extra-small{
    font-size: 12px;
  }
}
/* ... */

